# StitchyMobile

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  rust.gradle.kts  settings.gradle.kts
.cargo/: config  config.toml
app/: build.gradle.kts
app/src/androidTest/java/com/shininggrimace/stitchy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shininggrimace/stitchy/: FirstFragment.kt  MainActivity.kt  MainFragment.kt  SecondFragment.kt  SettingsFragment.kt  StitchyApplication.kt
app/src/main/java/com/shininggrimace/stitchy/adapter/: ImageAdapter.kt
app/src/main/java/com/shininggrimace/stitchy/adapters/: ImageAdapter.kt
app/src/main/java/com/shininggrimace/stitchy/fragment/: MainFragment.kt  (+1 more)
app/src/main/jniLibs/: .gitignore
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_main.xml  fragment_second.xml  fragment_settings.xml  holder_image.xml
app/src/main/res/layout-land/: fragment_main.xml
app/src/main/res/menu/: menu_main.xml  menu_settings.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/test/java/com/shininggrimace/stitchy/: ExampleUnitTest.kt
doc/: .~lock.icon.odg#  feature.odg  icon-build.odg  icon.odg
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  log.rs  options.rs  stitch.rs
(+10 files in other folders)
