[package]
name = "rust"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
stitchy-core = { version = "0.1.5", features = ["parser"] }
jni = { version = "0.21.1", default-features = false }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94" }
