[package]
name = "rust"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
stitchy-core = { version = "0.1.6", features = ["parser"] }
jni = { version = "0.21", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
